# homelyapp

./: .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  elm.json  package.yaml  stack-snapshot.yaml  stack.yaml
.github/workflows/: test.yaml
app/: Main.hs
app/generate/: Main.hs
app/server/: Main.hs
elm-src/: Main.elm
elm-src/Model/: Date.elm
elm-test/Model/: DateTest.elm
example/: .homely.yaml
src/: Homely.hs  Orphans.hs
src/Homely/: API.hs  Cmd.hs  Config.hs  DB.hs  Env.hs
src/Homely/Data/: Expense.hs
static/: index.js  main.js
test/: Spec.hs
test/Test/Homely/: DB.hs
