package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_binary",
    "haskell_test",
)

load(
    "//:build/common.bzl",
    "GHC_FLAGS",
)
load(
    "//build/rules/haskell:def.bzl",
    "paths_module",
)

haskell_library(
    name = "homelyapp-library",
    src_strip_prefix = "src",
    srcs = glob(["src/**/*.hs"]),
    deps = [
        "@stackage//:base",
        "@stackage//:blaze-html",
        "@stackage//:elmap",
        "@stackage//:esqueleto",
        "@stackage//:extensible",
        "@stackage//:extensible-elmap",
        "@stackage//:mix",
        "@stackage//:mix-json-logger",
        "@stackage//:mix-plugin-persistent-sqlite",
        "@stackage//:persistent",
        "@stackage//:persistent-sqlite",
        "@stackage//:rio",
        "@stackage//:servant-blaze",
        "@stackage//:servant-elmap",
        "@stackage//:servant-server",
        "@stackage//:th-lift-instances",
        "@stackage//:warp",
        "@stackage//:yaml",
    ],
    compiler_flags = GHC_FLAGS,
)

paths_module(
    name = "paths_module",
    package = "homelyapp",
    version = "1.0.0",
)

haskell_binary(
    name = "homelyapp",
    srcs = glob(["app/server/**/*.hs"]),
    deps = [
        ":homelyapp-library",
        ":paths_module",
        "@stackage//:base",
        "@stackage//:rio",
        "@stackage//:extensible",
        "@stackage//:dotenv",
        "@stackage//:mix",
        "@stackage//:mix-plugin-persistent-sqlite",
    ],
    compiler_flags = GHC_FLAGS,
)

haskell_binary(
    name = "generateElm",
    srcs = glob(["app/generate/**/*.hs"]),
    deps = [
        ":homelyapp-library",
        ":paths_module",
        "@stackage//:base",
        "@stackage//:elmap",
        "@stackage//:rio",
        "@stackage//:servant-elmap",
        "@stackage//:servant-server",
    ],
    compiler_flags = GHC_FLAGS,
)


haskell_test(
    name = "spec",
    srcs = glob(["test/**/*.hs"]),
    deps = [
        ":homelyapp-library",
        "@stackage//:base",
        "@stackage//:rio",
        "@stackage//:extensible",
        "@stackage//:mix",
        "@stackage//:mix-plugin-persistent-sqlite",
        "@stackage//:tasty",
        "@stackage//:tasty-hspec",
    ],
    compiler_flags = GHC_FLAGS,
)
